--- a/app/src/main/res/layout/item_ingredients.xml
+++ b/app/src/main/res/layout/item_ingredients.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_container"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="10dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:layout_width="match_parent">
 
     <TextView
-        android:id="@+id/textView_name"
+        android:id="@+id/textView_ingredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -16,4 +13,4 @@
         android:textSize="16sp"
         tools:text="Sancocho" />
 
-</FrameLayout>
+</merge>
